Form validation using JavaScript

--- a/validationJavaScript/validationJavaScript.html
+++ b/validationJavaScript/validationJavaScript.html
@@ -141,7 +141,7 @@
 	<tr>
 <td><label>Name: </label></td>
 <td>
-	<input type="text" name="name" id="name" onblur="validateString(this.id)">
+	<input type="text" name="name" id="name" onblur="validationString(this.id)">
 </td>	
     </tr>
     <tr>
